--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.22.10",
+    "@babel/core": "^7.22.11",
+    "@babel/preset-env": "^7.22.14",
+    "@babel/register": "^7.22.5",
     "@wdio/allure-reporter": "^8.15.10",
     "@wdio/cli": "^8.15.10",
     "@wdio/junit-reporter": "^8.16.1",
     "@wdio/local-runner": "^8.15.10",
     "@wdio/mocha-framework": "^8.15.10",
     "@wdio/spec-reporter": "^8.15.10",
+    "wdio-lambdatest-service": "^2.0.3",
     "wdio-video-reporter": "^4.0.3",
     "wdio-wait-for": "^3.0.6"
   },
